<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Calendar</string>
    <string name="what_label">What</string>
    <string name="where_label">Where</string>
    <string name="attendees_label">Guests</string>
    <string name="response_label">"<xliff:g id="response_type">%s</xliff:g> (<xliff:g id="guest_count">%d</xliff:g>)"</string>
    <string name="repeats_label">Repetition</string>
    <string name="no_title_label">(No title)</string>
    <plurals name="Nminutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nmins">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="Nhours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="Ndays">
        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <string name="show_agenda_view">"Show agenda"</string>
    <string name="show_day_view">"Show day"</string>
    <string name="agenda_view">"Agenda"</string>
    <string name="day_view">"Day"</string>
    <string name="week_view">"Week"</string>
    <string name="month_view">"Month"</string>
    <string name="event_view">"View event"</string>
    <string name="event_create">"New event"</string>
    <string name="event_edit">"Edit event"</string>
    <string name="event_delete">"Delete event"</string>
    <string name="goto_today">"Today"</string>
    <string name="menu_select_calendars">"Calendars"</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="plus_N_more">"(plus <xliff:g id="more_count">%d</xliff:g> more \u2026)"</string>
    <string name="calendars_title">"Calendars"</string>
    <string name="synced_visible">synced, visible</string>
    <string name="synced_not_visible">synced, not visible</string>
    <string name="not_synced_not_visible">not synced, not visible</string>
    <string name="event_edit_title">"Event details"</string>
    <string name="hint_what">"Event name"</string>
    <string name="hint_where">"Event location"</string>
    <string name="hint_description">"Event description"</string>
    <string name="hint_attendees">"Email addresses"</string>
    <string name="creating_event">"Event created"</string>
    <string name="saving_event">"Event saved"</string>
    <string name="loading_calendars_title">"Loading calendars"</string>
    <string name="loading_calendars_message">"Loading calendars\u2026"</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="alert_missed_events_single">(<xliff:g id="reminder_count">%s</xliff:g> more reminder)</string>
    <string name="alert_missed_events_multiple">(<xliff:g id="reminder_count">%s</xliff:g> more reminders)</string>
    <string name="event_info_title">View event</string>
    <string name="event_info_title_invite">Meeting invitation</string>
    <string name="add_new_reminder">Add reminder</string>
    <string name="edit_event_to_label">To</string>
    <string name="edit_event_from_label">From</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_calendar_label">Calendar</string>
    <string name="edit_event_show_extra_options">Show extra options</string>
    <string name="edit_event_hide_extra_options">Hide extra options</string>
    <string name="description_label">Description</string>
    <string name="presence_label">Show me as</string>
    <string name="privacy_label">Privacy</string>
    <string name="reminders_label">Reminders</string>
    <string name="no_syncable_calendars">No calendars</string>
    <string name="no_calendars_found">You have no calendars.</string>
    <string name="view_event_calendar_label">Calendar:</string>
    <string name="view_event_organizer_label">Organizer:</string>
    <string name="view_event_timezone_label">Local time zone:</string>
    <string name="view_event_response_label">Attending?</string>
    <string name="agenda_today">Today, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="loading">Loading\u2026</string>
    <string name="show_older_events">Showing events since <xliff:g id="oldest_search_range">%1$s</xliff:g>. Tap to look for more.</string>
    <string name="show_newer_events">Showing events until <xliff:g id="newest_search_range">%1$s</xliff:g>. Tap to look for more.</string>
    <string name="num_events">"Num events"</string>
    <string name="edit_event_label">"Edit event"</string>
    <string name="delete_label">"Delete"</string>
    <string name="delete_event_label">"Delete event"</string>
    <string name="save_label">Done</string>
    <string name="discard_label">Revert</string>
    <string name="import_label">"Import"</string>
    <string name="snooze_all_label">"Snooze all"</string>
    <string name="dismiss_all_label">"Dismiss all"</string>
    <string name="does_not_repeat">One-time event</string>
    <string name="daily">Daily</string>
    <string name="every_weekday">"Every weekday (Mon\u2013Fri)"</string>
    <string name="weekly">"Weekly (every <xliff:g id="days_of_week">%s</xliff:g>)"</string>
    <string name="monthly_on_day_count">"Monthly (every <xliff:g id="ordinal_number">%1$s</xliff:g> <xliff:g id="day_of_week">%2$s</xliff:g>)"</string>
    <string name="monthly">Monthly</string>
    <string name="yearly_plain">Yearly</string>
    <string name="monthly_on_day">"Monthly (on day <xliff:g id="day_of_month">%s</xliff:g>)"</string>
    <string name="yearly">"Yearly (on <xliff:g id="dates">%s</xliff:g>)"</string>
    <string name="custom">"Custom\u2026 (cannot customize on phone)"</string>
    <string name="modify_event">Change only this event.</string>
    <string name="modify_all">Change all events in the series.</string>
    <string name="modify_all_following">Change this and all future events.</string>
    <string name="delete_this_event_title">This event will be deleted.</string>
    <string name="delete_title">Delete</string>
    <string name="change_response_title">Change response</string>
    <string name="preferences_title">"Settings"</string>
    <string name="preferences_general_title">Calendar view setting</string>
    <string name="preferences_alerts_title">Reminder settings</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="preferences_alerts_type_title">Set alerts &amp; notifications</string>
    <string name="preferences_alerts_type_dialog">Alerts &amp; notifications</string>
    <string name="preferences_alerts_type_default">1</string>
    <string name="preferences_alerts_vibrateWhen_title">Vibrate</string>
    <string name="preferences_alerts_vibrateWhen_summary">Also vibrate for reminders</string>
    <string name="preferences_alerts_ringtone_title">Select ringtone</string>
    <string name="preferences_default_reminder_title">Default reminder time</string>
    <string name="preferences_default_reminder_dialog">Default reminder time</string>
    <string name="preferences_default_reminder_default">10</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_build_version">Build version</string>
    <string name="caldav_ctrl_title">CalDAV Control</string>
    <string name="setup_caldav_acc">Setup a CalDAV calendar</string>
    <string name="sync_caldav">Sync\'em</string>
    <string name="caldav_ctrlpanel_title">The Amazing CalDAV Control Panel</string>
    <string name="caldav_calname">Calendar Name</string>
    <string name="caldav_username">User Name</string>
    <string name="caldav_password">Password</string>
    <string name="caldav_host">Host</string>
    <string name="caldav_protocol">Protocol</string>
    <string name="caldav_port">Port</string>
    <string name="caldav_home">Home</string>
    <string name="caldav_collection">Collection</string>
    <string name="caldav_save">Just do it</string>
    <string name="caldav_remove">Nuke\'em</string>
    <string name="caldav_def_user">caldav4j</string>
    <string name="caldav_def_pswd">CalDAV4J</string>
    <string name="caldav_def_host">hub.chandlerproject.org</string>
    <string name="caldav_def_proto">https</string>
    <string name="caldav_def_port">443</string>
    <string name="caldav_def_home">/dav/collection/</string>
    <string name="caldav_def_coll">38f609b0-0c6a-11e0-9c9f-830012bc35cf</string>
    <string name="caldav_def_calname">CalDAV</string>
    <string name="caldav_done_remove">Mission Accomplished! Sir</string>
    <string name="caldav_done_sync">Completed! Sir</string>
    <string name="caldav_done_setup">Done! Sir</string>
    <string-array name="prefEntries_alerts_vibrateWhen">
        
        <item>Always</item>
        
        <item>Only when silent</item>
        
        <item>Never</item>
    </string-array>
    <string translatable="false" name="prefDefault_alerts_vibrateWhen">never</string>
    <string translatable="false" name="prefDefault_alerts_vibrate_true">always</string>
    <string translatable="false" name="prefDefault_alerts_vibrate_false">never</string>
    <string-array translatable="false" name="prefValues_alerts_vibrateWhen">
        <item>always</item>
        <item>silent</item>
        <item>never</item>
    </string-array>
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
</resources>